fix white spaces for mobile

--- a/src/Components/Entry/Entry.css
+++ b/src/Components/Entry/Entry.css
@@ -53,4 +53,5 @@
   flex-direction: row;
   padding: 120px;
   align-items: center;
+  margin-bottom: 95px;
 }
