--- a/src/Components/LoginApp/LoginApp.css
+++ b/src/Components/LoginApp/LoginApp.css
@@ -56,7 +56,7 @@
   justify-content: center;
   align-items: center;
   font-size: 30px;
-  margin-bottom: 70px;
+  margin-bottom: 90px;
   font-family: 'Itim', serif;
 }
 
